tests/ui/offset-of/offset-of-unsized-trait-object-missing-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/offset-of-unsized-trait-object-missing-lifetime.rs:11:8
   |
LL |     y: X,
   |        ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ struct T<'a> {
LL ~     y: X<'a>,
   |

error[E0782]: expected a type, found a trait
  --> $DIR/offset-of-unsized-trait-object-missing-lifetime.rs:11:8
   |
LL |     y: X,
   |        ^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |     y: dyn X,
   |        +++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0106, E0782.
For more information about an error, try `rustc --explain E0106`.
